# camera-qualifiyer

./: .env.sample  README.md  docker-compose.yml
backend/: .golangci.yaml  docker-compose.yml  go.mod  go.sum
backend/.docker/: Dockerfile
backend/api/: cfg.models.yaml  cfg.server.yaml  requests.http  v1.yaml
backend/api/photo/: cfg.server.yaml  v1.yaml
backend/api/ws/: cfg.models.yaml  cfg.server.yaml  v1.yaml
backend/cmd/: main.go
backend/configs/: docker.yaml  local.yaml
backend/internal/application/: app.go  closer.go
backend/internal/config/: config.go
backend/internal/handlers/photo/: handler.go
backend/internal/handlers/websocket/: handler.go
backend/internal/middleware/: requestId.go
backend/internal/models/: entity.go
backend/internal/rabbitmq/: publisher.go  rabbitmq.go
backend/internal/rabbitmq/consumer/: consumer.go
backend/internal/rabbitmq/producer/: publisher.go  rabbitmq.go
backend/internal/server/: server.go
backend/internal/service/photo/: service.go
backend/pkg/utils/http/: http.go
backend/pkg/websocket/: websocket.go
evaluator/: .gitignore  .pre-commit-config.yaml  Dockerfile  main.py  pyproject.toml
evaluator/src/: env.py  models.py  settings.py
evaluator/src/broker/: app.py
frontend/: README.md  eslint.config.js  package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.tsx  index.css  vite-env.d.ts
frontend/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  index.ts
frontend/src/features/evaluation/: EvaluationPage.tsx  constants.ts  index.ts  types.ts  utils.ts
(+12 files in other folders)
