[project]
name = "evaluator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "faststream[cli,rabbit]>=0.6.7",
    "loguru>=0.7.3",
    "pydantic-settings>=2.13.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]
